feat: support sort relevance by different type
