# backend/pkg/api/service/func_getdescendantrelevance.go
@@ -21,6 +21,7 @@ import (
 // @Param step query int64 true "查询步长(us)"
 // @Param entryService query string false "入口服务名"
 // @Param entryEndpoint query string false "入口Endpoint"
+// @Param sortBy query string false "排序字段,支持latency和errorRate"
 // @Success 200 {object} []response.GetDescendantRelevanceResponse
 // @Failure 400 {object} code.Failure
 // @Router /api/service/descendant/relevance [get]
